# context-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
docs/: customization.md  faq.md  memory-types.md  tool-protocol.md
scripts/: lint-template.sh
template/: CLAUDE.md
template/.claude/memory/: MEMORY.md
template/.claude/memory/_examples/: decision_example.md  glossary_example.md  gotcha_example.md  playbook_example.md
tests/: conftest.py  test_contract.py  test_install.py  test_lint.py
tests/fixtures/lint-bad/broken-frontmatter/: CLAUDE.md
tests/fixtures/lint-bad/broken-frontmatter/.claude/memory/: MEMORY.md
tests/fixtures/lint-bad/index-mismatch/: CLAUDE.md
tests/fixtures/lint-bad/index-mismatch/.claude/memory/: MEMORY.md
tests/fixtures/lint-bad/unfilled-placeholder/: CLAUDE.md
tests/fixtures/lint-bad/unfilled-placeholder/.claude/memory/: MEMORY.md
tests/fixtures/sample-node-repo/: CLAUDE.md  package.json
tests/fixtures/sample-node-repo/.claude/memory/: MEMORY.md
tests/fixtures/sample-node-repo/.claude/memory/decisions/: use-fastify.md
tests/fixtures/sample-node-repo/src/: server.ts
tests/fixtures/sample-python-repo/: CLAUDE.md  pyproject.toml
tests/fixtures/sample-python-repo/.claude/memory/: MEMORY.md
tests/fixtures/sample-python-repo/.claude/memory/decisions/: use-fastapi.md
tests/fixtures/sample-python-repo/.claude/memory/gotchas/: utc-everywhere.md
tests/fixtures/sample-python-repo/.claude/memory/playbooks/: add-endpoint.md
(+3 files in other folders)
