[project]
name = "sample-python-api"
version = "0.1.0"
description = "Minimal Python fixture for context-template"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.3"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
